test/success/std/packages/path_dep_app/src/main.sk
module Main {

import LibPath

fn main() {
    path_func();
}

}
