test/errors/coroutine/yield_outside_coroutine/main.sk
module Main {

fn main() {
    yield ();
}

}